# fira_thundervolt

./: .dockerignore  .editorconfig  CMakeLists.txt  Dockerfile  README.md  config.json  env_config.json  logging.conf  main.py  package.xml  pytest.ini  requirements.txt  run_sim_ref.sh
examples/: animation_field_plot_example.py  area_field_example.py  base_example.py  field_update_example.py  obstacle_field_example.py  oriented_attracting_field_example.py  pid_controller_example.py  radial_field_example.py  tangent_field_example.py  tangent_obstacles_example.py  wall_field_example.py
integration_tests/: boost_node_test.py  defender_tree_test.py  follow_field_test.py  go_back_x_test.py  go_behind_ball_test.py  go_near_corner_test.py  go_to_foes_goal_test.py  line_action_test.py  look_at_action_test.py  save_node_test.py  spin_action_test.py  test_back_to_goal.py  test_back_to_goal_area.py  test_base.py  test_boost_node.py  test_clear_ball.py  test_control.py  test_control_team.py  test_control_team_thread.py  test_defender_tree.py  test_follow_bal_y.py  test_follow_ball_x.py  test_follow_ball_y.py  test_follow_field.py  test_get_ball.py  test_go_behind_ball.py  test_go_near_corner.py  test_go_to_foes_goal.py  test_goalkeeper_tree.py  test_line_action.py  test_look_at_action.py  test_look_at_ball.py  test_referee.py  test_replacer.py  test_ros_control.py  test_ros_look_at_ball.py  test_ros_vision.py  test_save_node.py  test_spin_action_test.py  test_striker_tree.py  (+6 more)
tests/: test_base.py  test_data.py
thundervolt/: __init__.py  __main__.py  coach.py  game.py
(+74 files in other folders)
